# zkrust

./: Cargo.toml  LICENSE  README.md  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md
src/: lib.rs
zkrust/: Cargo.toml
zkrust-core/: Cargo.toml
zkrust-core/src/: auth.rs  checksum.rs  command.rs  constants.rs  error.rs  lib.rs  packet.rs  session.rs
zkrust-protocol/: Cargo.toml
zkrust-transport/: Cargo.toml
zkrust-transport/src/: error.rs  lib.rs  tcp.rs  udp.rs
zkrust-types/: Cargo.toml
zkrust-types/src/: device_info.rs  error.rs  lib.rs
zkrust/examples/: connect.rs  connect_udp.rs  device_control.rs
zkrust/src/: device.rs  error.rs  lib.rs
