[package]
name = "zkrust-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
parking_lot = "0.12.5"

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
