[package]
name = "zkrust-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }