[package]
name = "zkrust"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unofficial library of zkteco fingerprint attendance machines"

[dependencies]
zkrust-core = { path = "../zkrust-core" }
zkrust-transport = { path = "../zkrust-transport" }
zkrust-types = { path = "../zkrust-types" }

tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }