[package]
name = "zkrust"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
zkrust-core = { version = "0.1.0",path = "../zkrust-core" }
zkrust-transport = {version = "0.1.0", path = "../zkrust-transport" }
zkrust-types = { version = "0.1.0",path = "../zkrust-types" }

tokio = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }